--- a/index.html
+++ b/index.html
@@ -39,26 +39,34 @@
             <a class="navbar-brand" href="#">
                 <span class="brand-icon">◆</span> LUXE
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu"
-                aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="toggler-bar"></span>
-                <span class="toggler-bar"></span>
-                <span class="toggler-bar"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navMenu">
+
+            <!-- Mobile Toggles + Desktop Theme Toggle -->
+            <div class="d-flex align-items-center order-lg-3">
+                <button class="theme-toggle me-2 me-lg-0 ms-lg-3" id="themeToggle" aria-label="Toggle Theme">
+                    <i class="bi bi-sun-fill"></i>
+                    <i class="bi bi-moon-stars-fill"></i>
+                </button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu"
+                    aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="toggler-bar"></span>
+                    <span class="toggler-bar"></span>
+                    <span class="toggler-bar"></span>
+                </button>
+            </div>
+
+            <div class="collapse navbar-collapse order-lg-2" id="navMenu">
                 <ul class="navbar-nav ms-auto align-items-lg-center">
                     <li class="nav-item"><a class="nav-link active" href="#hero">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#admins">Admins</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                    <li class="nav-item ms-lg-3">
+                    <li class="nav-item ms-lg-3 mt-3 mt-lg-0">
                         <a class="btn btn-outline-gold" href="#gallery">Explore Art</a>
                     </li>
-                    <li class="nav-item ms-lg-2">
-                        <button class="theme-toggle" id="themeToggle" aria-label="Toggle Theme">
-                            <i class="bi bi-sun-fill"></i>
-                            <i class="bi bi-moon-stars-fill"></i>
+                    <li class="nav-item ms-lg-2 mt-3 mt-lg-0">
+                        <button class="btn btn-gold" id="authBtn" data-bs-toggle="modal" data-bs-target="#authModal">
+                            <i class="bi bi-person-circle me-1"></i> <span id="authBtnText">Sign In</span>
                         </button>
                     </li>
                 </ul>
@@ -147,11 +155,16 @@
                 <button class="filter-btn" data-filter="3d">3D Art</button>
             </div>
 
-            <!-- Upload Button -->
-            <div class="upload-btn-container" data-aos="fade-up" data-aos-delay="150">
+            <!-- Upload Button (Requires Auth) -->
+            <div class="upload-btn-container" data-aos="fade-up" data-aos-delay="150" id="uploadBtnContainer"
+                style="display: none;">
                 <button class="btn btn-outline-gold" data-bs-toggle="modal" data-bs-target="#uploadModal">
                     <i class="bi bi-cloud-upload me-2"></i>Upload Your Art
                 </button>
+            </div>
+            <div class="text-center mb-4" id="loginPromptContainer" data-aos="fade-up" data-aos-delay="150">
+                <p class="text-muted small"><i class="bi bi-info-circle me-1"></i> Sign in to safely upload and manage
+                    your artwork.</p>
             </div>
 
             <!-- Gallery Carousel Wrapper -->
@@ -597,7 +610,7 @@
                         </div>
                         <div class="artist-info">
                             <h4>Priyanshu Sekhar Sahoo</h4>
-                            <p>Down Syndrome Artist</p>
+                            <p>Digital Artist</p>
                             <span class="artist-location"><i class="bi bi-geo-alt"></i> Kendrapada, Odisha</span>
                         </div>
                     </div>
@@ -735,7 +748,7 @@
                             <div class="contact-icon"><i class="bi bi-telephone-fill"></i></div>
                             <div>
                                 <h5>Call Us</h5>
-                                <p>+91 8210691336<br>Mon — Sat, 9AM — 6PM</p>
+                                <p>+91 9124952076<br>Mon — Sat, 9AM — 6PM</p>
                             </div>
                         </div>
                         <div class="contact-socials">
@@ -927,12 +940,80 @@
         <span id="toastMessage">Action not allowed</span>
     </div>
 
+    <!-- ======= AUTH MODAL ======= -->
+    <div class="modal fade" id="authModal" tabindex="-1" aria-labelledby="authModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content custom-modal">
+                <div class="modal-header border-0 pb-0">
+                    <ul class="nav nav-tabs w-100 border-bottom-0" id="authTabs" role="tablist">
+                        <li class="nav-item flex-fill" role="presentation">
+                            <button class="nav-link active w-100 fw-bold auth-tab" id="login-tab" data-bs-toggle="tab"
+                                data-bs-target="#loginPane" type="button" role="tab" aria-controls="loginPane"
+                                aria-selected="true"
+                                style="color: var(--gold); background: transparent; border: none; border-bottom: 2px solid var(--gold);">Login</button>
+                        </li>
+                        <li class="nav-item flex-fill" role="presentation">
+                            <button class="nav-link w-100 fw-bold auth-tab" id="signup-tab" data-bs-toggle="tab"
+                                data-bs-target="#signupPane" type="button" role="tab" aria-controls="signupPane"
+                                aria-selected="false"
+                                style="color: var(--text-secondary); background: transparent; border: none;">Sign
+                                Up</button>
+                        </li>
+                    </ul>
+                    <button type="button" class="btn-close btn-close-white position-absolute end-0 top-0 m-3"
+                        data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body pt-4">
+                    <div class="tab-content" id="authTabsContent">
+                        <!-- Login Form -->
+                        <div class="tab-pane fade show active" id="loginPane" role="tabpanel"
+                            aria-labelledby="login-tab">
+                            <form id="loginForm">
+                                <div class="mb-3">
+                                    <label for="loginEmail" class="form-label">Email address</label>
+                                    <input type="email" class="form-control" id="loginEmail" required>
+                                </div>
+                                <div class="mb-4">
+                                    <label for="loginPassword" class="form-label">Password</label>
+                                    <input type="password" class="form-control" id="loginPassword" required>
+                                </div>
+                                <button type="submit" class="btn btn-gold w-100">Sign In</button>
+                            </form>
+                        </div>
+                        <!-- Sign Up Form -->
+                        <div class="tab-pane fade" id="signupPane" role="tabpanel" aria-labelledby="signup-tab">
+                            <form id="signupForm">
+                                <div class="mb-3">
+                                    <label for="signupName" class="form-label">Display Name</label>
+                                    <input type="text" class="form-control" id="signupName" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="signupEmail" class="form-label">Email address</label>
+                                    <input type="email" class="form-control" id="signupEmail" required>
+                                </div>
+                                <div class="mb-4">
+                                    <label for="signupPassword" class="form-label">Password</label>
+                                    <input type="password" class="form-control" id="signupPassword" required
+                                        minlength="6">
+                                    <div class="form-text text-muted">Minimum 6 characters</div>
+                                </div>
+                                <button type="submit" class="btn btn-outline-gold w-100">Create Account</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- AOS JS -->
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <!-- Firebase Config & Logic (Module) -->
+    <script type="module" src="firebase-config.js"></script>
     <!-- Custom JS -->
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
