--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                 </div>
 
                 <!-- Upload Button (Requires Auth) -->
-                <div class="upload-btn-container" data-aos="fade-up" data-aos-delay="150" id="uploadBtnContainer"
-                    style="display: none;">
+                <div class="upload-btn-container text-center mb-4 position-relative z-3" data-aos="fade-up"
+                    data-aos-delay="150" id="uploadBtnContainer" style="display: none;">
                     <button class="btn btn-outline-gold" data-bs-toggle="modal" data-bs-target="#uploadModal">
                         <i class="bi bi-cloud-upload me-2"></i>Upload Your Art
                     </button>
